<resources>
    <string name="app_name">FlagQuizGame</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Flag Quiz Game</string>
    <string name="start_text">Start</string>
    <string name="correct_text">Correct : </string>
    <string name="correct_number">0</string>
    <string name="wrong_number">0</string>
    <string name="wrong_text">Wrong : </string>
    <string name="empty_number">0</string>
    <string name="empty_text">Empty : </string>
    <string name="No_of_question_number" />
    <string name="No_of_question_text">Questions : </string>
    <string name="A_text">A</string>
    <string name="B_text">B</string>
    <string name="C_text">C</string>
    <string name="D_text">D</string>
    <string name="Next_text">Next</string>
    <string name="result_text">Your Score</string>
    <string name="next_quiz_text">Next Quiz</string>
    <string name="exit_text">Exit</string>
</resources>